tests/exceptions/ill-typed/ambiguous-panic-type-3.stella
language core;

extend with #lists;
extend with #panic;

fn main(n : Nat) -> Bool {
  return List::isempty(panic!)
}